--- a/src/sass/desktop/workshops-desktop.scss
+++ b/src/sass/desktop/workshops-desktop.scss
@@ -16,118 +16,124 @@
 
         .level {
             display: grid;
-            grid-template-columns: auto 115px auto 37px;
-            grid-template-rows: 70px 134px auto;
+            grid-template-columns: 1fr 605px auto 1fr 1fr;
+            grid-template-rows: repeat(1fr, 3);
+            gap: 34px;
             background-color: $darkgrey;
             margin-top: 100px;
-            padding-left: $leftMargin;
+            position: relative;
 
-            p {
-                color: $white;
-                font-weight: 300;
-                font-size: 22px;
+
+            .number {
+                font-size: 300px;
+                font-weight: 600;
+                color: $darkgrey;
+                grid-column: 1/1;
+                grid-row: 1/4;
+                background-color: $white;
+                height: 100%;
+                position: absolute;
             }
 
+            &.three {
+                .number {
+                    top: 0;
+                }
+            }
+
+
+
             .imgCircle {
-                height: 115px;
+                height: 240px;
                 aspect-ratio: 1;
                 background-color: $grey;
                 border-radius: 100%;
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                grid-column: 2/2;
-                transform: translateY(-50%);
+                grid-column: 3/4;
+                grid-row: 1/4;
+                margin: 46px 0px;
 
-                p {
-                    margin-top: 0;
-                    color: $darkorange;
-                    font-size: 28px;
-                    font-weight: 600;
+                img {
+                    width: 140px;
+                    aspect-ratio: 1;
                 }
 
                 div {
-                    height: 30px;
-                    aspect-ratio: 1;
-                    background-color: $lightgrey;
-                    border-radius: 100%;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    position: absolute;
-                    z-index: -1; //  :( ?
-                    transform: translate(150%, -150%);
+                    display: none;
                 }
             }
+        }
 
-            .apply {
-                writing-mode: vertical-rl;
-                transform: rotate(180deg);
-                vertical-align: middle;
-                grid-column: 4/4;
-                grid-row: 1/4;
-                font-size: 18px;
-                font-weight: 200;
-                color: $lighterdark;
-                background-color: $whitelight;
-                padding-top: $leftMargin;
+        .apply {
+            grid-column: 5/5;
+            grid-row: 1/4;
+            font-size: 42px;
+            line-height: 42px;
+            font-weight: 200;
+            color: $lighterdark;
+            background-color: $whitelight;
+            display: flex;
+            text-align: center;
+            align-items: center;
+        }
+
+        .yoga,
+        .quote {
+            width: 120px;
+            aspect-ratio: 1;
+        }
+
+
+        .yoga {
+            filter: invert(100%) sepia(0%) saturate(2%) hue-rotate(293deg) brightness(107%) contrast(101%);
+        }
+
+        .levelText {
+            grid-column: 2/3;
+            grid-row: 1/4;
+            margin-top: 46px;
+
+            h3,
+            p,
+            .button {
+                text-overflow: ellipsis;
+                overflow: hidden;
+                font-size: 22px;
             }
 
-            .yoga,
-            .quote {
-                width: 67px;
-                aspect-ratio: 1;
+            h3 {
+                color: $lightorange;
+                font-size: 38px;
+                font-weight: 300;
             }
 
-            .yoga {
-                filter: invert(100%) sepia(0%) saturate(2%) hue-rotate(293deg) brightness(107%) contrast(101%);
+            p {
+                color: $white;
+                font-weight: 300;
+                font-size: 22px;
+                margin-top: $leftMargin;
+                margin-right: $leftMargin;
             }
-
-            .levelText {
-                grid-column: 1/4;
-                grid-row: 2/4;
-                overflow: auto;
-
-                h3 {
-                    color: $lightorange;
-                    font-size: 22px;
-                    font-weight: 300;
-                }
-
-                h3,
-                p,
-                .button {
-                    text-overflow: ellipsis;
-                    overflow: hidden;
-                    font-size: 22px;
-                }
-
-                p {
-                    margin-top: $leftMargin;
-                    margin-right: $leftMargin;
-                }
-            }
+        }
 
 
-            .quoteFlex {
-                display: flex;
-                flex-direction: column;
-                grid-column: 2/2;
-                grid-row: 3/3;
-                align-items: center;
-                justify-content: center;
-                margin-top: 80px;
-                margin-bottom: $leftMargin*2;
+        .quoteFlex {
+            display: flex;
+            flex-direction: column-reverse;
+            grid-column: 4/5;
+            grid-row: 1/4;
+            align-items: flex-end;
+            justify-content: flex-start;
 
-                blockquote {
-                    text-align: center;
-                    font-size: 22px;
-                    font-weight: 300;
-                    color: $white;
-                    text-overflow: ellipsis;
-                    white-space: nowrap;
-                    overflow: hidden;
-                }
+
+            blockquote {
+                font-size: 38px;
+                font-weight: 300;
+                color: $white;
+                position: absolute;
+                top: 46px;
             }
         }
     }
