--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -4,9 +4,20 @@
   box-sizing: border-box;
 }
 
-html {
+html,
+body {
   font-family: "Source Sans Pro";
   scroll-behavior: smooth;
+  height: 100vh;
+  width: 100vw;
+  padding: 0;
+  margin: 0;
+}
+
+@include breakpoint(0, $mobile) {
+  .number {
+    display: none;
+  }
 }
 
 .super-headline {
